k8s/deployment-back-end.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birds-app-back-end-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: birds-app-back-end-jsphlinnmn
  template:
    metadata:
      labels:
        app: birds-app-back-end-jsphlinnmn
    spec:
      containers:
        - image: 'ghcr.io/jsphlinnmn/birds-app-back-end:147b1aadf90f86237031b17112fc7b8f5100728b'
          name: birds-back-front-end
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
