k8s/deployment-front-end.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birds-app-front-end-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: birds-app-front-end-jsphlinnmn
  template:
    metadata:
      labels:
        app: birds-app-front-end-jsphlinnmn
    spec:
      containers:
        - image: 'ghcr.io/jsphlinnmn/birds-app-front-end:f8690a1afd43a2e3ff3e544f5fe24941fbec8c88'
          name: birds-app-front-end
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
